Add solution5 ,6 by study tonivade